--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/siddharthav19/Lancify#readme",
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "ckeditor4": "^4.21.0",
     "cookie-parser": "^1.4.6",
@@ -33,6 +34,7 @@
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
+    "stripe": "^12.2.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
