--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^6.0.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.2",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
