--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
+    "client": "^0.0.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
@@ -25,7 +26,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
