--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.2",
     "nodemon": "^2.0.20",
+    "server": "^1.0.38",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
     "stripe": "^12.2.0",
