--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,7 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.2",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
