--- a/server/package.json
+++ b/server/package.json
@@ -32,7 +32,9 @@
     "helmet": "^6.0.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.2",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
+    "rotating-file-stream": "^3.2.1",
     "server": "^1.0.38",
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
