--- a/client/package.json
+++ b/client/package.json
@@ -12,16 +12,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "apexcharts": "^3.46.0",
     "axios": "^1.6.1",
     "chart.js": "^4.4.0",
     "client": "^0.0.1",
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.12.0",
     "react-paginate": "^8.2.0",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^8.1.3",
