--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run tailwind:css && nodemon -e ejs,js,json,css server.js",
+    "start": "nodemon server.js",
     "tailwind:css": "postcss public/css/tailwind.css -o public/css/styles.css"
   },
   "repository": {
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/siddharthav19/Lancify#readme",
   "dependencies": {
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.1",
     "ckeditor4": "^4.21.0",
     "cookie-parser": "^1.4.6",
@@ -36,6 +36,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
+    "redis": "^4.6.13",
     "rotating-file-stream": "^3.2.1",
     "server": "^1.0.38",
     "socket.io": "^4.6.1",
