--- a/server/package.json
+++ b/server/package.json
@@ -41,6 +41,8 @@
     "socket.io": "^4.6.1",
     "sqlite3": "^5.1.6",
     "stripe": "^12.2.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "xss-clean": "^0.1.1"
   },
   "devDependencies": {
