--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
     "helmet": "^6.0.1",
+    "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
