--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -23,7 +23,7 @@ jobs:
         working-directory: server
       
       - name: Run Tests
-        run: npx jest
+        run: npm test
         working-directory: server
 
       - name: Install Dependencies on Client
