Update tests.yaml set CI=""
To not treat warnings as errors

--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -31,5 +31,5 @@ jobs:
         working-directory: client
       
       - name: Build Client
-        run: npm run build
+        run: CI="" npm run build
         working-directory: client
