--- a/server/package.json
+++ b/server/package.json
@@ -33,6 +33,7 @@
     "helmet": "^6.0.1",
     "ioredis": "^5.4.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb-memory-server": "^9.2.0",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
